--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    border-radius: 22px;
+    /* border-radius: 22px; */
     /* `ttf-font-awesome` is required to be installed for icons */
     /* font-family: "Roboto Mono Medium", Helvetica, Arial, sans-serif; */
     font-family: "Source Code Pro";
